--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   carousel_slider: ^5.0.0
   animated_splash_screen: ^1.3.0
   shared_preferences: ^2.2.2
+  percent_indicator: ^4.2.5
 
 dev_dependencies:
   flutter_test:
@@ -67,6 +68,7 @@ flutter:
       - assets/images/C3.png
       - assets/images/principalLOG.png
       - assets/images/hospital.png
+      - assets/images/doctor.png
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
