--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,11 @@ dependencies:
   animated_splash_screen: ^1.3.0
   shared_preferences: ^2.2.2
   percent_indicator: ^4.2.5
+  font_awesome_flutter: ^10.8.0
+  page_transition: ^2.0.9
+  animated_text_kit: ^4.2.2
+  animations: ^2.0.7
+  google_fonts: ^6.2.1
 
 dev_dependencies:
   flutter_test:
@@ -69,6 +74,9 @@ flutter:
       - assets/images/principalLOG.png
       - assets/images/hospital.png
       - assets/images/doctor.png
+      - assets/images/javeriana.png
+      - assets/images/Universidad-Javeriana-Cali.jpg
+      - assets/images/logo-puj-cali-n.png
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
